# RFDetectionEstimation

./: README.md  datagen.py  datagenIridiumSupport.py
Detection/: DopplerDetection.ipynb  DopplerPerformance.ipynb  FinalSignalDetection.ipynb  MLDetection.ipynb
Estimation/: PracticalEstimatorAnalysis.ipynb  PracticalEstimators.py
RealDataProcessing/: PracticalEstimators.py  Temp.ipynb  datagen.py
SineWave/Detection/: FinalSignalDetection.ipynb  MatchedFilterDetection.ipynb
SineWave/Estimation/: PracticalEstimatorAnalysis.ipynb  SignalEstimation.ipynb  datagen.py  temp.ipynb
gr-detection_estimation/: CMakeLists.txt  MANIFEST.md
gr-detection_estimation/.conda/: README.md
gr-detection_estimation/.conda/recipe/: meta.yaml
gr-detection_estimation/apps/: CMakeLists.txt
gr-detection_estimation/cmake/Modules/: gnuradio-detection_estimationConfig.cmake
gr-detection_estimation/docs/: CMakeLists.txt  README.detection_estimation
gr-detection_estimation/docs/doxygen/: CMakeLists.txt  Doxyfile.in
gr-detection_estimation/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-detection_estimation/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-detection_estimation/grc/: CMakeLists.txt  detection_estimation_detector.block.yml
gr-detection_estimation/include/gnuradio/detection_estimation/: CMakeLists.txt  api.h
gr-detection_estimation/lib/: CMakeLists.txt
gr-detection_estimation/python/detection_estimation/: CMakeLists.txt  __init__.py  detector.py
gr-detection_estimation/python/detection_estimation/bindings/: CMakeLists.txt  python_bindings.cc
